# Software-Development-Labs

./: README.md
fclient/app/: build.gradle
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/fclient/app/: build.gradle
fclient/fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java
fclient/gradle/wrapper/: gradle-wrapper.properties
